[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/State.gd" type="Script" id=2]
[ext_resource path="res://script/states/AirState.gd" type="Script" id=3]
[ext_resource path="res://script/states/RootState.gd" type="Script" id=4]
[ext_resource path="res://script/TransitConditions.gd" type="Script" id=5]
[ext_resource path="res://script/Player.gd" type="Script" id=6]
[ext_resource path="res://script/states/jump.gd" type="Script" id=7]
[ext_resource path="res://script/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://script/states/fall.gd" type="Script" id=9]
[ext_resource path="res://script/states/GroundState.gd" type="Script" id=10]
[ext_resource path="res://script/states/walk.gd" type="Script" id=11]
[ext_resource path="res://script/states/idle.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 431, 30 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment(){
	COLOR = vec4(0.5,0.5,0.8,1.0);
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29, 29 )

[node name="world" type="Node2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 432, 571 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
material = SubResource( 3 )
scale = Vector2( 13.52, 1 )
texture = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 6 )

[node name="HFSM" type="Node" parent="Player"]
script = ExtResource( 8 )

[node name="TransitConditions" type="Node" parent="Player/HFSM"]
script = ExtResource( 5 )

[node name="RootState" type="Node" parent="Player/HFSM"]
script = ExtResource( 4 )

[node name="AirState" type="Node" parent="Player/HFSM/RootState"]
script = ExtResource( 3 )

[node name="fall" type="Node" parent="Player/HFSM/RootState/AirState"]
script = ExtResource( 9 )

[node name="jump" type="Node" parent="Player/HFSM/RootState/AirState"]
script = ExtResource( 7 )

[node name="GroundState" type="Node" parent="Player/HFSM/RootState"]
script = ExtResource( 10 )

[node name="walk" type="Node" parent="Player/HFSM/RootState/GroundState"]
script = ExtResource( 11 )

[node name="idle" type="Node" parent="Player/HFSM/RootState/GroundState"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 4 )

[node name="State" type="Node" parent="."]
script = ExtResource( 2 )
